# fluffy-lamp

./: .gitignore  CMakeLists.txt  README.md
include/: lib.hpp
src/: lib.cpp  main.cpp
